# goph420-w2024-lab03-stCA

./: README.md  pyproject.toml
examples/: seismology.py
src/goph420_lab03/: regression.py
tests/: test_multi_regress.py
