[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "goph420_lab03" 
version = "0.0.1"
authors = [
{ name="Carla Acosta Sira", email="carla.acostasira@ucalgary.ca" },
] 
description="An example Python package" 
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
"numpy",
"matplotlib",
] 
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent", 
"License :: OSI Approved :: GNU General Public License v3",
] 
[project.urls]
"Homepage" = "https://github.com/carlaacostasira/goph420-w2024-lab03-stCA"
